<resources>
    <string name="app_name">MindRate</string>

    <string name="hello">Hello</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <!--MainActivity-->
    <string name="choose_language">Choose Language</string>

    <!--LogInActivity-->
    <string name="log_in_study_id">STUDY ID</string>
    <string name="log_in_study_id_hint">Please input your study ID</string>
    <string name="log_in_proband_id">PROBAND ID</string>
    <string name="log_in_proband_id_hint">Please input your proband ID</string>
    <string name="log_in_birthday">BIRTHDAY</string>
    <string name="log_in_gender">GENDER</string>
    <string name="log_in_gender_male">MALE</string>
    <string name="log_in_gender_female">FEMALE</string>
    <string name="log_in_occupation">OCCUPATION</string>
    <string name="log_in_occupation_hint">Please enter your occupation</string>
    <string name="log_in_button_log_in">LOG IN</string>
    <string name="load_fail">Failed to load questionnaire. Please check your network and try again.</string>

    <!--OverviewActivity-->
    <string name="nav_profile">Profile</string>
    <string name="nav_questionnaire">Questionnaires</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About us</string>


    <!--settings-->
    <string name="language">Language</string>

    <!--languages-->
    <string-array name="languages_show">
        <item>English</item>
        <item>Deutsch</item>
        <!--<item></item>-->
    </string-array>

    <string-array name="languages_value">
        <item>en</item>
        <item>de</item>
        <!--<item></item>-->
    </string-array>

    <string name="choose_language_dialog_title">Please choose language.</string>

    <!--submit answer-->
    <string name="submit">Submit</string>
    <string name="submit_or_not">Do you want to submit your answer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>

    <!--questionnaire-->

    <string name="empty_list_description">No questionnaires. \n Have a nice day!</string>

    <!--questionnaire_item-->
    <string name="questionnaire_begins_at">begins at: </string>
    <string name="questionnaire_will_end_at">will end at: </string>

    <!--notification-->
    <string name="questionnair_is_triggered">A questionnaire is triggered.</string>
    <string name="click_to_answer">Click here to answer.</string>

    <!--upload-->
    <string name="upload_fail">Sorry. The upload failed. Please make sure your Internet is available.</string>

    <!--input empty error-->
    <string name="input_empty_error">The input can not be empty.</string>
    <string name="question_not_answered">This question is not answered.</string>
    <string name="check_network">Please check your network and try again.</string>
    <string name="edit_text_hint">Please enter</string>
    <string name="developer">Developer</string>
    <string name="hello_world">Hello World!</string>
</resources>
