...
    tools:context="com.example.mindrate.activity.AnswerQuestionnaireActivity">

    <include layout="@layout/title_answer_questionnaire"/>


    <TextView
        android:id="@+id/questionContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        android:background="@color/windowBackgroundColor"
...
